Update image source path in home.html

--- a/html/home.html
+++ b/html/home.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <img
-        src="/web/html/assets/tcckoisushi-removebg-preview.png"
+        src="../html/assets/tcckoisushi-removebg-preview.png"
         alt="Koi Sushi"
         class="logo"
       />
